[package]
name = "aks-version-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework & Async Runtime
actix-web = "4.12.1"
tokio = { version = "1.48.0", features = ["full"] } # 'full' includes time, sync, and process
tokio-retry = "0.3" # For robust error handling with retries

# Data Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
anyhow = "1"
thiserror = "2.0.17"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

# Caching and Request Coalescing (The core feature)
moka = { version = "0.12.11", features = ["future"] }
rand = "0.9.2"
