[package]
name = "aksver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
time = "0.3.44"
semver = "1.0.27"
actix-web = "4.12.1"
regex = "1.12.2"
moka = { version = "0.12.11", features = ["future"] }
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
azure_identity = { version = "0.30.0", features = ["tokio"] }
azure_core = "0.30.0"
tokio-retry = "0.3"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json", "env-filter"] }
clap = { version = "4.5.53", features = ["derive", "env"] } 
arc-swap = "1.7.1"
actix-request-identifier = "4.2.0"
openssl = { version = "0.10.75", features = ["vendored"] }
