[package]
name = "az"
version = "0.1.0"
edition = "2021"

[dependencies]
azure_identity = { version = "0.30.0", features = ["tokio"] }
azure_core = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
