[package]
name = "az"
version = "0.1.0"
edition = "2021"

[dependencies]
time = "0.3.44"
itertools = "0.14.0"
# Actix Web
actix-web = "4.12.1"

# Async caching
moka = { version = "0.12.11", features = ["future"] }

# Random numbers
rand = "0.9.2"

# Tokio runtime
tokio = { version = "1.48.0", features = ["full"] }

# Azure SDK
azure_identity = { version = "0.30.0", features = ["tokio"] }
azure_core = "0.30.0"

# Retry logic
tokio-retry = "0.3"

# Error handling
thiserror = "2.0.17"

# JSON serialization/deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# HTTP client
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }

# Logging
env_logger = "0.11.8"
log = "0.4.29"
