[package]
name = "multus-ct"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "2.0.1", features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.26.1", features = ["v1_34"] }
serde_json = "1.0.145"
json-patch = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
futures = "0.3.31"
anyhow = "1.0.100"
kube-leader-election = "0.42"
prometheus = "0.14"
lazy_static = "1.5.0"
warp = { version = "0.4.2", features = ["server"] }
dashmap = "6.1.0"
