[package]
name = "pnp"
version = "0.1.0"
edition = "2021"

[dependencies]
natpmp = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "gzip"] }
anyhow = "1.0"
openssl = { version = "0.10.75", features = ["vendored"] }
serde_json = "1.0"
