[package]
name = "wg"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json", "cookies"] }
openssl = { version = "0.10.75", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
sha2 = "0.10.9"
dotenv = "0.15"
ssh2 = "0.9.5"
chrono = "0.4.42"
ctrlc = "3"
rand = "0.9.2"
